// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`list-field can mount "read only" filled list field 1`] = `
<div id="app">
	<div class="SharpList">
		<div class="SharpList__sticky-wrapper text-end">
			<!---->
		</div>
		<div>
			<div class="list-group shadow-sm">
				<div class="SharpList__item list-group-item">
					<!---->
					<div class="SharpGrid">
						<div class="SharpGrid__row row">
							<div class="SharpGrid__col col-md">
								<div> FIELD DISPLAY MOCK </div>
							</div>
						</div>
					</div>
					<!---->
					<!---->
				</div>
			</div>
		</div>
		<!---->
	</div>
</div>
`;

exports[`list-field can mount collapsed list field 1`] = `
<div id="app">
	<div class="SharpList">
		<div class="SharpList__sticky-wrapper text-end">
			<!---->
		</div>
		<div>
			<div class="list-group shadow-sm">
				<div class="SharpList__item list-group-item SharpList__item--drag-active">
					<!---->
					<div class="SharpTemplate SharpTemplate--has-children">
						<span> Antoine </span>
					</div>
					<!---->
				</div>
			</div>
			<div class="mt-3">
				<button class="SharpButton btn SharpList__add-button btn-text btn-block" disabled="disabled">
					＋ Ajouter un élément
				</button>
			</div>
		</div>
		<!---->
	</div>
</div>
`;

exports[`list-field can mount empty "read only" list field 1`] = `
<div id="app">
	<div class="SharpList">
		<div class="SharpList__sticky-wrapper text-end">
			<!---->
		</div>
		<div>
			<div class="list-group shadow-sm"></div>
		</div>
		<em class="SharpList__empty-alert">{{ form.list.empty }}</em>
	</div>
</div>
`;

exports[`list-field can mount empty list field 1`] = `
<div id="app">
	<div class="SharpList">
		<div class="SharpList__sticky-wrapper text-end">
			<!---->
		</div>
		<div>
			<div class="list-group shadow-sm"></div>
			<div class="">
				<button class="SharpButton btn SharpList__add-button btn-text btn-block">
					＋ Ajouter un élément
				</button>
			</div>
		</div>
		<!---->
	</div>
</div>
`;

exports[`list-field can mount filled list field 1`] = `
<div id="app">
	<div class="SharpList SharpList--can-sort">
		<div class="SharpList__sticky-wrapper text-end">
			<button class="SharpButton btn SharpList__sort-button btn-sm btn-text" style="pointer-events: auto;">
				{{ form.list.sort_button.inactive }}
				<svg width="1.125em" height="1.125em" viewBox="0 0 24 22" fill-rule="evenodd" style="margin-left: .5em;">
					<path d="M20 14V0h-4v14h-4l6 8 6-8zM4 8v14h4V8h4L6 0 0 8z"></path>
				</svg>
			</button>
		</div>
		<div>
			<div class="list-group shadow-sm">
				<div class="SharpList__item list-group-item">
					<div class="SharpList__new-item-zone">
						<button class="SharpButton btn btn-primary btn-sm">
							{{ form.list.insert_button }}
						</button>
					</div>
					<div class="SharpGrid">
						<div class="SharpGrid__row row">
							<div class="SharpGrid__col col-md">
								<div> FIELD DISPLAY MOCK </div>
							</div>
						</div>
					</div>
					<button aria-label="{{ form.list.remove_button }}" class="SharpList__remove-button btn-close"></button>
					<div class="SharpList__drag-handle d-flex align-items-center px-1">
						<i class="fas fa-grip-vertical opacity-25"></i>
					</div>
				</div>
				<div class="SharpList__item list-group-item">
					<div class="SharpList__new-item-zone">
						<button class="SharpButton btn btn-primary btn-sm">
							{{ form.list.insert_button }}
						</button>
					</div>
					<div class="SharpGrid">
						<div class="SharpGrid__row row">
							<div class="SharpGrid__col col-md">
								<div> FIELD DISPLAY MOCK </div>
							</div>
						</div>
					</div>
					<button aria-label="{{ form.list.remove_button }}" class="SharpList__remove-button btn-close"></button>
					<div class="SharpList__drag-handle d-flex align-items-center px-1">
						<i class="fas fa-grip-vertical opacity-25"></i>
					</div>
				</div>
			</div>
			<div class="mt-3">
				<button class="SharpButton btn SharpList__add-button btn-text btn-block">
					＋ Ajouter un élément
				</button>
			</div>
		</div>
		<!---->
	</div>
</div>
`;

exports[`list-field can mount non addable, non removable, non sortable list field 1`] = `
<div id="app">
	<div class="SharpList">
		<div class="SharpList__sticky-wrapper text-end">
			<!---->
		</div>
		<div>
			<div class="list-group shadow-sm">
				<div class="SharpList__item list-group-item">
					<!---->
					<div class="SharpGrid">
						<div class="SharpGrid__row row">
							<div class="SharpGrid__col col-md">
								<div> FIELD DISPLAY MOCK </div>
							</div>
						</div>
					</div>
					<!---->
					<!---->
				</div>
				<div class="SharpList__item list-group-item">
					<!---->
					<div class="SharpGrid">
						<div class="SharpGrid__row row">
							<div class="SharpGrid__col col-md">
								<div> FIELD DISPLAY MOCK </div>
							</div>
						</div>
					</div>
					<!---->
					<!---->
				</div>
			</div>
		</div>
		<!---->
	</div>
</div>
`;

exports[`list-field can mount with bulk upload 1`] = `
<div class="SharpList">
	<div class="SharpList__sticky-wrapper text-end">
		<!---->
	</div>
	<draggable-stub options="[object Object]" list="">
		<span name="expand" tag="div" class="list-group shadow-sm">
			<listupload-stub field="[object Object]" limit="10"></listupload-stub>
		</span>
		<div class="mt-3">
			<button-stub variant="primary" text="true" block="true" class="SharpList__add-button">
				＋ Ajouter un élément
			</button-stub>
		</div>
	</draggable-stub>
	<!---->
</div>
`;

exports[`list-field can mount with full list 1`] = `
<div id="app">
	<div class="SharpList SharpList--can-sort">
		<div class="SharpList__sticky-wrapper text-end">
			<button class="SharpButton btn SharpList__sort-button btn-sm btn-text" style="pointer-events: auto;">
				{{ form.list.sort_button.inactive }}
				<svg width="1.125em" height="1.125em" viewBox="0 0 24 22" fill-rule="evenodd" style="margin-left: .5em;">
					<path d="M20 14V0h-4v14h-4l6 8 6-8zM4 8v14h4V8h4L6 0 0 8z"></path>
				</svg>
			</button>
		</div>
		<div>
			<div class="list-group shadow-sm">
				<div class="SharpList__item list-group-item">
					<!---->
					<div class="SharpGrid">
						<div class="SharpGrid__row row">
							<div class="SharpGrid__col col-md">
								<div> FIELD DISPLAY MOCK </div>
							</div>
						</div>
					</div>
					<button aria-label="{{ form.list.remove_button }}" class="SharpList__remove-button btn-close"></button>
					<div class="SharpList__drag-handle d-flex align-items-center px-1">
						<i class="fas fa-grip-vertical opacity-25"></i>
					</div>
				</div>
				<div class="SharpList__item list-group-item">
					<!---->
					<div class="SharpGrid">
						<div class="SharpGrid__row row">
							<div class="SharpGrid__col col-md">
								<div> FIELD DISPLAY MOCK </div>
							</div>
						</div>
					</div>
					<button aria-label="{{ form.list.remove_button }}" class="SharpList__remove-button btn-close"></button>
					<div class="SharpList__drag-handle d-flex align-items-center px-1">
						<i class="fas fa-grip-vertical opacity-25"></i>
					</div>
				</div>
				<div class="SharpList__item list-group-item">
					<!---->
					<div class="SharpGrid">
						<div class="SharpGrid__row row">
							<div class="SharpGrid__col col-md">
								<div> FIELD DISPLAY MOCK </div>
							</div>
						</div>
					</div>
					<button aria-label="{{ form.list.remove_button }}" class="SharpList__remove-button btn-close"></button>
					<div class="SharpList__drag-handle d-flex align-items-center px-1">
						<i class="fas fa-grip-vertical opacity-25"></i>
					</div>
				</div>
				<div class="SharpList__item list-group-item">
					<!---->
					<div class="SharpGrid">
						<div class="SharpGrid__row row">
							<div class="SharpGrid__col col-md">
								<div> FIELD DISPLAY MOCK </div>
							</div>
						</div>
					</div>
					<button aria-label="{{ form.list.remove_button }}" class="SharpList__remove-button btn-close"></button>
					<div class="SharpList__drag-handle d-flex align-items-center px-1">
						<i class="fas fa-grip-vertical opacity-25"></i>
					</div>
				</div>
				<div class="SharpList__item list-group-item">
					<!---->
					<div class="SharpGrid">
						<div class="SharpGrid__row row">
							<div class="SharpGrid__col col-md">
								<div> FIELD DISPLAY MOCK </div>
							</div>
						</div>
					</div>
					<button aria-label="{{ form.list.remove_button }}" class="SharpList__remove-button btn-close"></button>
					<div class="SharpList__drag-handle d-flex align-items-center px-1">
						<i class="fas fa-grip-vertical opacity-25"></i>
					</div>
				</div>
			</div>
		</div>
		<!---->
	</div>
</div>
`;
